# url-shortener

./: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
.sqlx/: query-adb9e5c441039531c5b0e8b570080a2c8e8baa74ee45bf6268eb90be94f0f8a8.json  query-dae33a4eb9919fd20a326b52c00c45db50b45621da43ae36598b80e3c685bef3.json  query-fc6865d913e78354d5d01f293577d75e053210467173ff3cf4ee527802918378.json
migrations/: 20250408193106_init.sql  20250408203428_unique_shortened_url.sql
src/: main.rs
src/handlers/: add_url.rs  get_url.rs  mod.rs  remove_url.rs
src/utils/: mod.rs  rand.rs
src/utils/api/: responses.rs
