[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = {version = "4.10.2"}
dotenv = "0.15.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = {version = "1.0.219"}
serde_json = {version = "1.0.140"}
sqlx = {version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"]}
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread", "macros"] }